[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~3.2", features = ["derive", "env"] }
config = { version = "0.13.2", default-features = false, features = ["toml"] }
osmpbfreader = "0.17.0"
osm-pbf = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snafu = "^0.7.3"
nonempty = "0.9.0"
num-traits = "0.2.18"
time = "^0.3"
tokio = { version = "1.20.2", features = ["full", "tracing"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-time-0_3"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }