[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
config = { version = "0.13.2", default-features = false, features = ["toml"] }
osmpbfreader = "0.16.0"
osm-pbf = "0.3.3"
petgraph = "0.6"
geo = "0.26"
geo-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "^0.7.3"
nonempty = "0.9.0"
num-traits = "0.2.18"
indicatif = "0.17"
time = "^0.3"
rayon = "1.7"
hashbrown = "0.14"
tokio = { version = "1.20.2", features = ["full", "tracing"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-time-0_3"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }