[package]
name = "open_rust_map"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
clap = { version = "~3.2", features = ["derive", "env"] }
config = { version = "0.13.2", default-features = false, features = ["toml"] }
geo = "0.29.0"
meilisearch-sdk = "0.27.0"
num-traits = "0.2.18"
osmpbfreader = "0.17"
rstar = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1"
snafu = "^0.7.3"
time = "^0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "~0.3.16", features = ["json"] }
